# macpoint

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: mac-deltas.md  verification-checklist.md
docs/abilities/: add_slide_with_layout.md  add_speaker_notes.md  analyze_template.md  evaluate.md  list_templates.md  manage_presentation.md  manage_slide.md  populate_placeholder.md  slide_snapshot.md  switch_slide.md
macpoint/: __init__.py  __main__.py  server.py  state.py
macpoint/backends/: __init__.py  applescript_ppt.py  pptx_backend.py  template_instantiate.py
