[project]
name = "macpoint"
version = "0.1.0"
description = "macOS MCP server for Microsoft PowerPoint for Mac — automate slide decks from Cursor and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Igdalov", email = "andrewigdal17@gmail.com" }]
keywords = ["mcp", "powerpoint", "macos", "automation", "cursor", "slides", "presentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "mcp>=1.14.0",
    "python-pptx>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/AndrewIgdal17/macpoint"
Issues = "https://github.com/AndrewIgdal17/macpoint/issues"
Repository = "https://github.com/AndrewIgdal17/macpoint"

[project.scripts]
macpoint = "macpoint.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macpoint"]
